2018-04-16  Youenn Fablet  <youenn@apple.com>

        Use NetworkLoadChecker to handle synchronous HTTP loads
        https://bugs.webkit.org/show_bug.cgi?id=184240

        Reviewed by Chris Dumez.

        * http/tests/xmlhttprequest/access-control-preflight-not-successful-expected.txt:
        * http/wpt/beacon/cors/cors-preflight-blob-failure.html: Fix buggy assertion.
        Test should check for actual request header and not header name in Access-Control-Request-Headers.
        * http/wpt/beacon/cors/cors-preflight-blob-success.html: Ditto.
        * platform/mac-wk1/http/tests/xmlhttprequest/access-control-and-redirects-expected.txt: Added.
        * platform/mac-wk1/http/tests/xmlhttprequest/access-control-preflight-not-successful-expected.txt: Added.
        * platform/mac-wk1/http/tests/xmlhttprequest/cross-origin-no-authorization-expected.txt: Added.
        * platform/mac-wk1/imported/w3c/web-platform-tests/XMLHttpRequest/access-control-and-redirects-expected.txt: Added.
        * platform/win/http/tests/xmlhttprequest/access-control-and-redirects-expected.txt: Added.
        * platform/win/http/tests/xmlhttprequest/access-control-preflight-not-successful-expected.txt: Added.
        * platform/win/http/tests/xmlhttprequest/cross-origin-no-authorization-expected.txt: Added.
        * platform/mac-highsierra-wk2/imported/w3c/web-platform-tests/XMLHttpRequest/send-authentication-cors-basic-setrequestheader-expected.txt: Copied from LayoutTests/imported/w3c/web-platform-tests/XMLHttpRequest/send-authentication-cors-basic-setrequestheader-expected.txt.
        * platform/mac-highsierra-wk2/imported/w3c/web-platform-tests/XMLHttpRequest/send-authentication-cors-setrequestheader-no-cred-expected.txt: Copied from LayoutTests/imported/w3c/web-platform-tests/XMLHttpRequest/send-authentication-cors-setrequestheader-no-cred-expected.txt.