@@ -1347,3 +1347,9 @@ webkit.org/b/183714 [ Debug ] http/tests/storageAccess/grant-storage-access-unde
 webkit.org/b/183860 [ Release ] http/wpt/service-workers/third-party-registration.html [ Skip ]
 
 webkit.org/b/184245 http/tests/workers/service/service-worker-cache-api.https.html [ Pass Failure ]
+
+#FIXME: Tests that fail when run after fast/events/ios/double-tap-zoom.html with UIWKTextInteractionAssistant turned on
+fast/flexbox/flexbox-fail-to-select-same-line.html [ ImageOnlyFailure Pass ]
+fast/text/international/hebrew-selection.html [ ImageOnlyFailure Pass ]
+imported/blink/editing/style/justify-left-crash.html [ ImageOnlyFailure Pass ]
+imported/blink/fast/css/user-select-none.html [ ImageOnlyFailure Pass ]
