@@ -1,3 +1,15 @@
+2018-04-16  Megan Gardner  <megan_gardner@apple.com>
+
+        Switch to UIWKTextInteractionAssistant for non-editable text
+        https://bugs.webkit.org/show_bug.cgi?id=182834
+
+        Reviewed by Beth Dakin.
+        
+        Switch to only using one assistant for text selection.
+
+        * UIProcess/ios/WKContentViewInteraction.mm:
+        (-[WKContentView useSelectionAssistantWithGranularity:]):
+
 2018-04-16  Youenn Fablet  <youenn@apple.com>
 
         Use NetworkLoadChecker to handle synchronous HTTP loads
