@@ -1,3 +1,14 @@
+2018-04-16  Megan Gardner  <megan_gardner@apple.com>
+
+        Switch to UIWKTextInteractionAssistant for non-editable text
+        https://bugs.webkit.org/show_bug.cgi?id=182834
+
+        Reviewed by Beth Dakin.
+        
+        Marking tests as flaky and to be fixed later.
+
+        * platform/ios-wk2/TestExpectations:
+
 2018-04-16  Youenn Fablet  <youenn@apple.com>
 
         Use NetworkLoadChecker to handle synchronous HTTP loads
